adding some styling

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <title>Task management app</title>
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.2/dist/semantic.min.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div id="app" class="pushable">
@@ -20,12 +21,19 @@
       <div class="ui container pusher">
         <div class="ui grid">
           <div class ="six wide column">
-            <div id="todo" class="tasklist">
+            <div id="todo" class="taskList">
+              <div class="ui header">
+                <i class="icon play circle orange"></i>In Progress Tasks ({{ todoTasks.length }})
+              </div>
               <div v-for="task in todoTasks">
                 {{ task.id }} {{ task.name }}: {{ task.description }} completed? {{ task.completed }}
               </div>
             </div>
-            <div id="completed" class="taskslist">
+
+            <div id="completed" class="taskList">
+              <div class="ui header">
+                <i class="icon check circle green"></i>Completed Tasks ({{ completedTasks.length }})
+              </div>
               <div v-for="task in completedTasks">
                 {{ task.id }} {{ task.name }}: {{ task.description }} completed? {{ task.completed }}
               </div>
