--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
               <div class="ui header">
                 <i class="icon play circle orange"></i>In Progress Tasks ({{ todoTasks.length }})
               </div>
-              <div v-for="task in todoTasks">
+              <div class="ui segment task"
+                   v-bind:class="task.completed ? 'done' : 'todo' "
+                   v-for="task in todoTasks">
                 {{ task.id }} {{ task.name }}: {{ task.description }} completed? {{ task.completed }}
               </div>
             </div>
@@ -34,7 +36,9 @@
               <div class="ui header">
                 <i class="icon check circle green"></i>Completed Tasks ({{ completedTasks.length }})
               </div>
-              <div v-for="task in completedTasks">
+              <div class="ui segment task"
+                   v-bind:class="task.completed ? 'done' : 'todo' "
+                   v-for="task in completedTasks">
                 {{ task.id }} {{ task.name }}: {{ task.description }} completed? {{ task.completed }}
               </div>
             </div>
