--- a/index.html
+++ b/index.html
@@ -25,22 +25,14 @@
               <div class="ui header">
                 <i class="icon play circle orange"></i>In Progress Tasks ({{ todoTasks.length }})
               </div>
-              <div class="ui segment task"
-                   v-bind:class="task.completed ? 'done' : 'todo' "
-                   v-for="task in todoTasks">
-                {{ task.id }} {{ task.name }}: {{ task.description }} completed? {{ task.completed }}
-              </div>
+              <task v-bind:task="task" v-for="task in todoTasks" v-bind:key="task.id" />
             </div>
 
             <div id="completed" class="taskList">
               <div class="ui header">
                 <i class="icon check circle green"></i>Completed Tasks ({{ completedTasks.length }})
               </div>
-              <div class="ui segment task"
-                   v-bind:class="task.completed ? 'done' : 'todo' "
-                   v-for="task in completedTasks">
-                {{ task.id }} {{ task.name }}: {{ task.description }} completed? {{ task.completed }}
-              </div>
+              <task v-bind:task="task" v-for="task in completedTasks" v-bind:key="task.id" />
             </div>
           </div>
           <div class="six wide column"></div>
